Cabal/tests/ParserTests/errors/undefined-flag.cabal
name:                hpython-test-common
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Isaac Elliott
maintainer:          isaace71295@gmail.com
-- copyright:
category:            Testing
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10

library
  exposed-modules:     Helpers
  build-depends:       base >=4.11 && <5
  hs-source-dirs:      src
  ghc-options:         -Wall
                       -Wincomplete-patterns
                       -Wincomplete-record-updates
                       -Wunused-imports
                       -fno-warn-name-shadowing
  if flag(development)
    ghc-options:       -Werror
  default-language:    Haskell2010
